# [libs/domain/mining-strategy/Cargo.toml]
[package]
name = "prospector-domain-strategy"
version = "0.3.2"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Núcleo estratégico de Prospector: Orquestación de motores Jacobianos, Arqueología de Entropía y Sellado de Misiones."

[dependencies]
# --- SINAPSIS INTERNA SOBERANA (SSoT del Workspace) ---
# Hereda la infraestructura completa nivelada a Zenith V2026
prospector-core-math = { workspace = true }
prospector-core-gen = { workspace = true }
prospector-core-probabilistic = { workspace = true }
prospector-domain-models = { workspace = true }
prospector-domain-forensics = { workspace = true }
prospector-blockchain-client = { workspace = true }

# --- MOTOR ASÍNCRONO Y PARALELISMO ---
# Requerido para la orquestación de ráfagas y hilos de CPU
futures = "0.3"
tokio = { workspace = true }
rayon = { workspace = true }

# --- SERIALIZACIÓN Y CRIPTOGRAFÍA ---
# Nivelado para la gestión de ADN sintético y hashes SHA-256/SHA-1
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
chrono = { workspace = true }

# --- OBSERVABILIDAD Y GESTIÓN DE ERRORES ---
# ✅ NIVELACIÓN SOBERANA: Habilitación de macros e instrumentación para el Panóptico
tracing = { workspace = true, features = ["attributes"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# --- ARMAMENTO PARA EL PROVING GROUNDS ---
proptest = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { workspace = true, features = ["blocking", "json"] }

[lib]
name = "prospector_domain_strategy"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN ESTRATÉGICA (PROTOCOL TRINITY)
# =================================================================

# 1. Certificación de Arqueología Satoshi-XP (OpenSSL 0.9.8h)
[[test]]
name = "satoshi_xp_engine_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/satoshi_xp_engine_test.rs"

# 2. Validación de Recuperación Android LCG (CVE-2013-7372)
[[test]]
name = "android_lcg_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/android_lcg_test.rs"

# 3. Certificación del Orquestador Maestro (Proving Grounds Ready)
[[test]]
name = "sequential_engine_master"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_engine_master.test.rs"

# 4. Validación de Derivación Dual (Comp/Uncomp)
[[test]]
name = "forensic_dual_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/forensic_dual_test.rs"

# 5. Prueba de Estabilidad de Memoria Estática (Alloc-Free)
[[test]]
name = "sequential_alloc_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_alloc_test.rs"

# 6. Escrutinio de Límites de Lote Montgomery (Magazine Boundaries)
[[test]]
name = "sequential_boundary_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_boundary_test.rs"

# 7. Test de Integración de Ejecución de Estrategias
[[test]]
name = "tests_execution"
path = "src/tests_execution.rs"

# ✅ NIVELACIÓN SOBERANA V203: Único target para el motor secuencial
[[test]]
name = "sequential_engine_v203"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_engine_test.rs"

# ✅ NIVELACIÓN SOBERANA V250: Único target para el despacho polimórfico
[[test]]
name = "executor_dispatch_v250"
path = "../../../tests/mirror/libs/domain/mining_strategy/executor_dispatch.test.rs"

# --- NUEVAS PRUEBAS DE ESTRATO V0.3.2 ---

# ✅ NIVELACIÓN SOBERANA: Certificación de Resolución ECDLP (Canguro)
[[test]]
name = "kangaroo_lambda_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/kangaroo_lambda.test.rs"

# ✅ NIVELACIÓN SOBERANA: Validación de Auditoría de Diccionarios (Brainwallets)
[[test]]
name = "dictionary_engine_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/dictionary_engine.test.rs"
