
[package]
name = "prospector-domain-strategy"
version = "0.3.2"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Núcleo estratégico de Prospector: Orquestación de motores Jacobianos, Arqueología de Entropía y Sellado de Misiones."

[dependencies]
# --- SINAPSIS INTERNA SOBERANA (SSoT del Workspace) ---
prospector-core-math = { workspace = true }
prospector-core-gen = { workspace = true }
prospector-core-probabilistic = { workspace = true }
prospector-domain-models = { workspace = true }
prospector-domain-forensics = { workspace = true }
prospector-blockchain-client = { workspace = true }

# --- MOTOR ASÍNCRONO Y PARALELISMO ---
futures = "0.3"
tokio = { workspace = true }
rayon = { workspace = true }

# --- SERIALIZACIÓN Y CRIPTOGRAFÍA ---
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
chrono = { workspace = true }

# --- OBSERVABILIDAD Y GESTIÓN DE ERRORES ---
tracing = { workspace = true, features = ["attributes"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# --- ARMAMENTO PARA EL PROVING GROUNDS ---
proptest = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { workspace = true, features = ["blocking", "json"] }

[lib]
name = "prospector_domain_strategy"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN ESTRATÉGICA (PROTOCOL TRINITY)
# =================================================================

# 1. Arqueología Satoshi-XP (OpenSSL 0.9.8h)
[[test]]
name = "satoshi_xp_engine_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/satoshi_xp_engine_test.rs"

# 2. Recuperación Android LCG (CVE-2013-7372)
[[test]]
name = "android_lcg_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/android_lcg_test.rs"

# 3. Aceleración SIMD Android (Hot-Path)
[[test]]
name = "android_lcg_simd_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/android_lcg_simd.test.rs"

# 4. Orquestador Maestro (Proving Grounds Ready)
[[test]]
name = "sequential_engine_master"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_engine_master.test.rs"

# 5. Validación de Derivación Dual (Comp/Uncomp)
[[test]]
name = "forensic_dual_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/forensic_dual_test.rs"

# 6. Estabilidad de Memoria Estática (Alloc-Free)
[[test]]
name = "sequential_alloc_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_alloc_test.rs"

# 7. Límites de Lote Montgomery (Magazine Boundaries)
[[test]]
name = "sequential_boundary_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_boundary_test.rs"

# 8. Integración de Ejecución (Legacy Logic)
[[test]]
name = "tests_execution"
path = "src/tests_execution.rs"

# 9. Target Nominal Core para el Motor Secuencial
# ✅ RESOLUCIÓN SOBERANA: Se elimina el duplicado v203 para sanar el linker.
[[test]]
name = "sequential_sync_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/sequential_engine_test.rs"

# 10. Despacho polimórfico V250
[[test]]
name = "executor_dispatch_v250"
path = "../../../tests/mirror/libs/domain/mining_strategy/executor_dispatch.test.rs"

# 11. Lógica combinatoria U256
[[test]]
name = "combinatoric_logic_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/combinatoric_logic.test.rs"

# 12. Resolución ECDLP (Canguro de Pollard)
[[test]]
name = "kangaroo_lambda_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/kangaroo_lambda.test.rs"

# 13. Auditoría de Diccionarios (Brainwallets)
[[test]]
name = "dictionary_engine_test"
path = "../../../tests/mirror/libs/domain/mining_strategy/engines/dictionary_engine.test.rs"
