# [libs/infra/db-turso/Cargo.toml]
[package]
name = "prospector-infra-db"
version = "0.3.0"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Adaptador de persistencia táctica (Motor A) basado en libSQL con soporte para transacciones ACID y gobernanza IGFS."

[dependencies]
# --- MOTOR DE BASE DE DATOS ZENITH ---
# Sincronizado con la versión 0.29 del Workspace
libsql = { workspace = true }

# --- RUNTIME Y ASINCRONÍA ---
# Requerido para la gestión de blobs de ADN y I/O de red
tokio = { workspace = true, features = ["fs", "io-util"] }

# --- SINAPSIS INTERNA SOBERANA ---
prospector-core-math = { workspace = true }
prospector-domain-models = { workspace = true }

# --- SERIALIZACIÓN Y TRATAMIENTO DE DATOS ---
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
num-bigint = "0.4"
sha2 = { workspace = true }

# --- OBSERVABILIDAD Y GESTIÓN DE ERRORES ---
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# --- ARMAMENTO PARA EL PROVING GROUNDS ---
# Requerido para la validación de latencia y reportes al HUB
reqwest = { workspace = true, features = ["blocking", "json"] }

[lib]
name = "prospector_infra_db"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN TÁCTICA (PROTOCOL TRINITY)
# =================================================================

# 1. Auditoría del Ciclo de Vida de Misiones (Queued -> Active -> Completed)
[[test]]
name = "mission_lifecycle_test"
path = "../../../tests/mirror/libs/infra/db_turso/mission_lifecycle.test.rs"

# 2. Validación de Gobernanza de Identidad (IGFS - Release & Purge)
[[test]]
name = "identity_governance_test"
path = "../../../tests/mirror/libs/infra/db_turso/identity_governance.test.rs"

# 3. Escrutinio de Errores Semánticos (Panóptico Ready)
[[test]]
name = "errors_test"
path = "../../../tests/mirror/libs/infra/db_turso/errors.test.rs"

# 4. Certificación de Paridad de Consultas SQL (Placeholders)
[[test]]
name = "identity_queries_test"
path = "../../../tests/mirror/libs/infra/db_turso/identity_queries.test.rs"

# 5. Validación de Repositorio V270 (Omniscient Hardened)
[[test]]
name = "mission_repository_v270_test"
path = "../../../tests/mirror/libs/infra/db_turso/mission_repository_v270.test.rs"

# 6. Auditoría de Registro de Repositorios (Access Matrix)
[[test]]
name = "repositories_registry_test"
path = "../../../tests/mirror/libs/infra/db_turso/repositories_registry.test.rs"

[[test]]
name = "mission_slicing_v300"
path = "../../../tests/mirror/libs/infra/db_turso/mission_slicing_v300.test.rs"

[[test]]
name = "schema_evolution_v150"
path = "../../../tests/mirror/libs/infra/db_turso/schema_evolution_v150.test.rs"



# =================================================================
# NOTA TÉCNICA:
# El motor utiliza 'mode=memory&cache=shared' en los entornos de
# prueba para garantizar la visibilidad del esquema entre hilos.
# =================================================================
