# [libs/shared/heimdall/Cargo.toml]
[package]
name = "prospector-shared-heimdall"
version = "0.2.1"
edition = "2021"
authors = ["Raz Podesta <metaShark Tech>"]
description = "Nervio óptico del sistema: Gestión de telemetría estructurada, filtrado de estratos y observabilidad distribuida."
license = "MIT"

[dependencies]
# --- MOTOR DE OBSERVABILIDAD SOBERANO ---
# ✅ RESOLUCIÓN: Se inyecta la feature "attributes" para habilitar #[instrument]
# Mantiene la versión del workspace pero extiende sus capacidades para este aparato.
tracing = { workspace = true, features = ["attributes"] }

# --- ESTRATO DE FORMATEO Y FILTRADO ---
# Configurado para emitir JSON estructurado compatible con el Panóptico L5
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# --- UTILIDADES DE ESTRATO ---
# Nivelado para la gestión de marcas temporales y errores
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# --- ARMAMENTO PARA EL PROVING GROUNDS ---
# Requerido para la validación de integridad de logs y reportes al HUB
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = { workspace = true }
# ✅ SINCRO: Requerido para la validación de paridad en el test espejo
tokio = { workspace = true, features = ["full"] }

[lib]
name = "prospector_shared_heimdall"
path = "src/lib.rs"

# =================================================================
# MATRIZ DE CERTIFICACIÓN DE OBSERVABILIDAD (PROTOCOL TRINITY)
# =================================================================

# 1. Auditoría de Integridad de Trazado (Heimdall Core)
# Certifica que los logs mantienen el esquema JSON y los niveles de severidad.
[[test]]
name = "heimdall_integrity_test"
path = "../../../tests/mirror/libs/shared/heimdall/heimdall_integrity.test.rs"

# =================================================================
# NOTA TÉCNICA:
# Esta refactorización sella el error de compilación del VAIO
# al asegurar que el compilador vea la definición de la macro
# 'instrument' en el árbol de dependencias.
# =================================================================
